--- a/FilmWarp/FilmWarp.vcxproj
+++ b/FilmWarp/FilmWarp.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="Expression3V.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="StringParser.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Video.h" />
   </ItemGroup>
@@ -156,6 +157,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="StringParser.cpp" />
     <ClCompile Include="Video.cpp" />
   </ItemGroup>
   <ItemGroup>
