--- a/FilmWarp/FilmWarp.vcxproj.filters
+++ b/FilmWarp/FilmWarp.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Video.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StringParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Video.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StringParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
