--- a/FilmWarp/FilmWarp.vcxproj.filters
+++ b/FilmWarp/FilmWarp.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="StringParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SmartSpan.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Recorder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -45,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="StringParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Recorder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
