--- a/FilmWarp/FilmWarp.vcxproj.filters
+++ b/FilmWarp/FilmWarp.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Recorder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FilmWarp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
