--- a/FilmWarp/FilmWarp.vcxproj
+++ b/FilmWarp/FilmWarp.vcxproj
@@ -174,6 +174,9 @@
     <ClCompile Include="StringParser.cpp" />
     <ClCompile Include="Video.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\appveyor.yml" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
 </Project>
