--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,8 +3,8 @@ install:
   - cmd: ECHO "INSTALL OPENCV:"
   - cmd: choco install OpenCV
   - cmd: refreshenv
-  - cmd: dir C:\tools
-  - cmd: ECHO %OPENCV-DIR%
+  - cmd: dir C:\tools\opencv
+  - cmd: ECHO %OPENCV_DIR%
   - cmd: ECHO %PATH%
 image: Visual Studio 2017
 build:
