--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,8 @@ install:
   - cmd: ECHO "INSTALL OPENCV:"
   - cmd: choco install OpenCV
   - cmd: refreshenv
-  - cmd: dir C:\tools\opencv
+  - cmd: dir C:\tools\opencv\build
+  - cmd: dir C:\tools\opencv\sources
   - cmd: ECHO %OPENCV_DIR%
   - cmd: ECHO %PATH%
 image: Visual Studio 2017
